--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -29,6 +29,12 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+* , *:before, *:after{ 
+	box-sizing:border-box; 
+	-moz-box-sizing:border-box; 
+	-webkit-box-sizing:border-box; 
+	-ms-box-sizing:border-box;
+  }
 body {
 	line-height: 1;
 	font-family: 'PT Sans', sans-serif;
@@ -36,6 +42,9 @@ body {
 }
 ol, ul {
 	list-style: none;
+}
+a {
+	text-decoration: none;
 }
 blockquote, q {
 	quotes: none;
