--- a/src/styles/settings/colors.css
+++ b/src/styles/settings/colors.css
@@ -4,6 +4,7 @@
     --color-black-medium: rgba(0, 0, 0, .6);
     --color-gray-light: #F5F5F5;
     --color-gray-medium: #dadada;
+    --color-gray-dark: #838383;
 
     --color-frontend: #6BD1FF;
     --color-infra: #9CD33B;
