--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -60,7 +60,20 @@ table {
 }
 
 html, body {
-    font-size: 1px;
 	min-width: 320px;
 	height: 100vh;
+}
+
+::-webkit-scrollbar {
+    width: 6px;
+}
+ 
+::-webkit-scrollbar-track {
+	background-color: rgb(209, 209, 209);
+    border-radius: 10px;
+}
+ 
+::-webkit-scrollbar-thumb {
+	border-radius: 5px;
+	background-color: rgb(173, 173, 173);
 }
