--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -20,8 +20,7 @@ time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
-	font-size: 100%;
-	font: inherit;
+	/* font: inherit; */
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
@@ -64,16 +63,3 @@ html, body {
 	height: 100vh;
 }
 
-::-webkit-scrollbar {
-    width: 6px;
-}
- 
-::-webkit-scrollbar-track {
-	background-color: rgb(209, 209, 209);
-    border-radius: 10px;
-}
- 
-::-webkit-scrollbar-thumb {
-	border-radius: 5px;
-	background-color: rgb(173, 173, 173);
-}
