--- a/src/components/FooterApp/styles.css
+++ b/src/components/FooterApp/styles.css
@@ -1,22 +1,17 @@
 footer#footer-component {
     background-color: var(--color-gray-light);
-    padding: 2rem;
     position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
 }
 
-svg {
+footer#footer-component .media-buttons {
+    padding-right: 15px;
+}
+footer#footer-component svg.media-buttons  {
     color: var(--color-gray-dark);
 }
-svg:hover {
+footer#footer-component svg.media-buttons:hover {
     color: var(--color-black-medium);
-}
-
-@media(max-width: 800px) {
-    footer {
-        padding: 1rem 1rem; 
-    }
-     
 }
