--- a/src/components/ButtonApp/styles.css
+++ b/src/components/ButtonApp/styles.css
@@ -13,9 +13,35 @@
     transition: 0.2s;
 }
 
-.button-primary:hover {
+.button-primary:hover, .button-secondary:hover, .button-tertiary:hover {
     opacity: 0.8;
 }
+
+.button-secondary {
+    padding: 0.5rem 1rem;
+    color: var(--color-primary-dark);
+    border-radius: 6px;
+    border: 1px solid var(--color-primary-dark);
+    font-size: 1.5rem;
+    cursor: pointer;
+    text-decoration: none;
+    background-color: transparent;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+}
+
+.button-tertiary {
+    color: var(--color-primary-dark);
+    background-color: transparent;
+    border: none;
+    font-size: 1.5rem;
+    cursor: pointer;
+    font-weight: 600;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
 /* 
 export const ButtonSecondary = styled.button`
     padding: 1rem 3rem;
