--- a/src/components/HeaderApp/styles.css
+++ b/src/components/HeaderApp/styles.css
@@ -1,10 +1,17 @@
 header#header-component {
-    background-color: var(--color-gray-light);
+    background-color: var(--color-background-primary);
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
     z-index: 10;
+    border-bottom: 1px solid var(--color-primary-light)
+}
+
+header span.logo {
+    font-family: 'Playfair Display';
+    font-size: 2rem;
+    color: var(--color-primary-dark);
 }
 
 @media(max-width: 800px) {
