--- a/src/pages/ProjectsDetail/styles.css
+++ b/src/pages/ProjectsDetail/styles.css
@@ -1,11 +1,24 @@
 #project-detail-page {
     margin: 60px 0;
     width: 100%;
-    display: inline-flex;
+    max-width: 1300px;
+    margin: auto;
+    display: flex;
 }
 
-#project-detail-page .col-8 {
-    width: 66.6%;
+#project-detail-page .col-6 {
+    width: 50%;
+    margin: 2rem;
+}
+
+#project-detail-page .col-6 img {
+    max-height: auto;
+    width: 100%;
+    border-radius: 20px 20px 0 0;
+}
+/* 
+#project-detail-page .col-6 {
+    width: 50%;
     background-color: white;
     margin: 20px 10px 20px 20px;
     border-radius: 20px;
@@ -13,7 +26,7 @@
     height: 100%; 
 }
 
-#project-detail-page .col-8 .content {
+#project-detail-page .col-6 .content {
     padding: 3rem;
 }
 
@@ -27,13 +40,9 @@
     margin-top: 1rem;
 }
 
-#project-detail-page .col-8 img {
-    max-height: 150px;
-    width: 100%;
-    border-radius: 20px 20px 0 0;
-}
 
-#project-detail-page .col-4 {
+
+#project-detail-page .col-6 {
     width: 33.3%;
     background-color: white;
     margin: 20px 20px 20px 10px;
@@ -42,6 +51,6 @@
     border: 1px solid var(--color-gray-medium);
 }
 
-#project-detail-page .col-4 .content {
+#project-detail-page .col-6 .content {
     padding: 3rem;
-}
+} */
