--- a/src/styles/settings/colors.css
+++ b/src/styles/settings/colors.css
@@ -1,7 +1,7 @@
 :root {
 
 
-    --color-primary-dark: #0B0B0B;
+    --color-primary-dark: #575757;
     --color-primary-medium: #808080;
     --color-primary-light: #CBC8C8;
     --color-background-primary: #F9F9F9;
