--- a/src/components/ButtonApp/styles.css
+++ b/src/components/ButtonApp/styles.css
@@ -18,10 +18,10 @@
 }
 
 .button-secondary {
-    padding: 0.5rem 1rem;
+    padding: 1rem 2.2rem;
     color: var(--color-primary-dark);
-    border-radius: 6px;
-    border: 1px solid var(--color-primary-dark);
+    border-radius: 4px;
+    border: 2px solid var(--color-primary-dark);
     font-size: 1.5rem;
     cursor: pointer;
     text-decoration: none;
@@ -29,6 +29,8 @@
     font-weight: 600;
     display: flex;
     align-items: center;
+    line-height: 2.4rem;
+    letter-spacing: 0.2rem;
 }
 
 .button-tertiary {
