--- a/src/components/HeaderApp/styles.css
+++ b/src/components/HeaderApp/styles.css
@@ -1,22 +1,18 @@
 header#header-component {
-    background-color: var(--color-background-primary);
+    background-color: transparent;
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
     z-index: 10;
-    border-bottom: 1px solid var(--color-primary-light)
-}
-
-header span.logo {
-    font-family: 'Playfair Display';
-    font-size: 2rem;
-    color: var(--color-primary-dark);
 }
 
 @media(max-width: 800px) {
     header {
         padding: 1rem 1rem;  
+    }
+    header#header-component {
+        background-color: #F9F9F9;
     }
    
 }
