--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -2,14 +2,20 @@ main {
     padding-top: 100px;
     max-width: 1300px;
     margin: auto;
+    
 }
 
 main#main-page a {
     font-size: 20rem;
+    
 }
 
 main#main-page ul {
     max-width: 700px;
+}
+
+main#main-page ul div {
+    background-color: transparent;
 }
 
 main#main-page ul li {
@@ -18,6 +24,8 @@ main#main-page ul li {
     text-transform: uppercase;
     letter-spacing: 0.4rem;
     transition: 0.3s;
+    z-index: 40;
+    background-color: transparent;
 }
 
 
@@ -26,17 +34,28 @@ main#main-page ul p {
     color: #8B8B8B;
     margin-top: -15px;
     margin-bottom: 30px;
+    z-index: 4;
+    background-color: transparent;
 }
 
+img {
+    background-color: transparent;
+    z-index: 1;
+}
+li {
+    z-index: 3213;
+    position: relative;
+}
 main#main-page ul li:hover {
    color: black;
+   z-index: 4;
 }
 
 main#main-page .project-image {
-    opacity: 0;
+    opacity: 1;
     transition: 0.3s;
     position: fixed;
-    
+    /* z-index: 1; */
     top: 50%;
     left: 70%;
     transform: translate(-50%, -50%);
@@ -45,17 +64,25 @@ main#main-page .project-image {
 main#main-page .project-image img {
     max-height: 600px;
     max-width: 600px;
-    /* width: 100%;
-    max-width: 400px;
-    height: auto;
-    z-index: 10;
-    top: 30%;
-    right: 10%; */
+    z-index: 1;
+
 }
 main#main-page a:hover + .project-image {
     opacity: 1;
     
 }
+
+@media (max-width: 1200px) {
+    main#main-page .project-image {
+        left: 80%;
+    }
+    main#main-page .project-image img {
+        max-height: 300px;
+        max-width: 300px;
+    }
+}
+
+
 @media (max-width: 900px) {
     main#main-page .project-image {
         display: none;
